--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "@mui/material": "^5.15.15",
     "@types/babel-generator": "^6.25.8",
     "axios": "^1.7.2",
+    "cors": "^2.8.5",
+    "cors-anywhere": "^0.4.4",
+    "express": "^4.19.2",
     "firebase": "^10.11.0",
+    "nodemon": "^3.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
